@@ -9,6 +9,7 @@ pylemon-coal3-and-4-fix=Coal 3 and 4 Fix
 pylemon-kevlar2-fix=Kevlar 2 Fix
 pylemon-epoxy-collagen-fix=Epoxy from Collagen Tech Fix
 pylemon-carbon-black-to-graphite=Carbon Black to Graphite Chain
+pylemon-nexelit-antimony-alloy-casting=Nexelit Antimony Alloy Casting
 
 [mod-setting-description]
 pylemon-the-final=An item that space-science uses, it takes every item in the game to create.
@@ -21,6 +22,7 @@ pylemon-coal3-and-4-fix=Buffs the output of coal3 and 4 recipes by 25x. Also ner
 pylemon-kevlar2-fix=Buffs the output of kevlar 2 by 4x.
 pylemon-epoxy-collagen-fix=Buffs the Epoxy recipe unlocked from the Collagen Tech by 4x.
 pylemon-carbon-black-to-graphite=Adds 3 new recipes to convert Carbon Black to Graphite in the Graphene tech.
+pylemon-nexelit-antimony-alloy-casting=Adds 2 new recipes to cast Nexelit Antimony Alloy
 
 [item-name]
 the-final=The Final
