@@ -60,4 +60,16 @@ data:extend {
         setting_type = "startup",
         default_value = false
     },
+    {
+        type = "bool-setting",
+        name = "pylemon-nexelit-antimony-alloy-casting",
+        setting_type = "startup",
+        default_value = false
+    }
 }
+-- {
+--     type = "bool-setting",
+--     name = "pylemon-",
+--     setting_type = "startup",
+--     default_value = false
+-- },
